--- a/libinstall/Cargo.toml
+++ b/libinstall/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+pest = "2.0"
+pest_derive = "2.0"
+anyhow = "1.0.56"
+thiserror = "1.0.30"
