--- a/libcfgparser/Cargo.toml
+++ b/libcfgparser/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "libinstall"
+name = "libcfgparser"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+pest = "2.0"
+pest_derive = "2.0"
 anyhow = "1.0.56"
 thiserror = "1.0.30"
-libcfgparser = {path= "../libcfgparser"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
