--- a/libsysconfig/Cargo.toml
+++ b/libsysconfig/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "libinstall"
+name = "libsysconfig"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,5 +9,8 @@ edition = "2021"
 anyhow = "1.0.56"
 thiserror = "1.0.30"
 libcfgparser = {path= "../libcfgparser"}
+libshadow = {path = "../libshadow"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+regex = "1"
+lazy_static = "1"
