--- a/libsysconfig/Cargo.toml
+++ b/libsysconfig/Cargo.toml
@@ -14,3 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1"
 lazy_static = "1"
+
+[dependencies.tera]
+version = "1"
+default-features = false
