--- a/sysconfig/Cargo.toml
+++ b/sysconfig/Cargo.toml
@@ -7,3 +7,12 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+thiserror = "1.0"
+clap = { version = "3.1", features = ["derive", "regex", "env"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_yaml = "0.8"
+ron = "0.7"
+
+libsysconfig = {path = "../libsysconfig"}
+libcfgparser = {path = "../libcfgparser"}
