--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,5 +1,13 @@
 [env]
 CARGO_MAKE_EXTEND_WORKSPACE_MAKEFILE = true
+CARGO_MAKE_WORKSPACE_SKIP_MEMBERS = ["libcfgparser", "libinstall", "libshadow", "libsysconfig"]
+CARGO_BUILD_TYPE = "debug"
+
+[env.development]
+CARGO_BUILD_TYPE = "debug"
+
+[env.production]
+CARGO_BUILD_TYPE = "release"
 
 [tasks.format]
 install_crate = "rustfmt"
@@ -10,9 +18,19 @@ args = ["fmt", "--", "--emit=files"]
 command = "cargo"
 args = ["clean"]
 
-[tasks.build]
+[tasks.build_all]
+run_task = [
+    { name = "build_debug", condition = { profiles = ["development"] } },
+    { name = "build_release", condition = { profiles = ["production"] } },
+]
+
+[tasks.build_debug]
 command = "cargo"
 args = ["build"]
+
+[tasks.build_release]
+command = "cargo"
+args = ["build", "--release"]
 
 [tasks.test]
 command = "cargo"
@@ -21,3 +39,30 @@ args = ["test"]
 [tasks.check]
 command = "cargo"
 args = ["check"]
+
+[tasks.install]
+workspace = false
+dependencies = ["build_all"]
+run_task = [
+    { name = "install_macos", condition = { platforms = ["mac"] } },
+    { name = "install_illumos", condition = { platforms = ["illumos"] } },
+    { name = "install_default" },
+]
+
+[tasks.install_illumos]
+workspace = false
+env = {"INSTALL" = "/usr/bin/ginstall"}
+run_task = { name = "run_install", fork = true }
+
+[tasks.install_macos]
+workspace = false
+env = {"INSTALL" = "/usr/local/bin/ginstall"}
+run_task = { name = "run_install", fork = true }
+
+[tasks.install_env]
+[tasks.install_env.env]
+"proto_dir" = "${CARGO_MAKE_CRATE_TARGET_DIRECTORY}/protype"
+"syscfg_usr_lib" = "${proto_dir}/usr/lib/sysconfig"
+"usr_bin" = "${proto_dir}/usr/bin"
+"manifest_dir" = "${proto_dir}/lib/svc/manifest"
+"build_dir" = "${CARGO_MAKE_CRATE_TARGET_DIRECTORY}/${CARGO_BUILD_TYPE}"
