--- a/libinstall/Cargo.toml
+++ b/libinstall/Cargo.toml
@@ -2,6 +2,11 @@
 name = "libinstall"
 version = "0.1.0"
 edition = "2021"
+description = "Library with all the Plumbing needed so your application can install a illumos system"
+license = "MPL-2.0"
+homepage = "https://github.com/Toasterson/illumos-installer"
+repository = "https://github.com/Toasterson/illumos-installer"
+documentation = "https://github.com/Toasterson/illumos-installer"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
