--- a/Makefile.toml
+++ b/Makefile.toml
@@ -46,14 +46,8 @@ workspace = false
 dependencies = ["build_all"]
 run_task = [
     { name = "install_macos", condition = { platforms = ["mac"] } },
-    { name = "install_illumos", condition = { platforms = ["illumos"] } },
     { name = "install_default" },
 ]
-
-[tasks.install_illumos]
-workspace = false
-env = {"INSTALL" = "/usr/bin/ginstall"}
-run_task = { name = "run_install", fork = true }
 
 [tasks.install_macos]
 workspace = false
@@ -62,7 +56,7 @@ run_task = { name = "run_install", fork = true }
 
 [tasks.install_default]
 workspace = false
-env = {"INSTALL" = "/usr/bin/install"}
+env = {"INSTALL" = "/usr/local/bin/ginstall"} # For some reason cargo make does not detect the illumos platform properly thus make it the detault
 run_task = { name = "run_install", fork = true }
 
 [tasks.install_env]
@@ -73,9 +67,9 @@ run_task = { name = "run_install", fork = true }
 "manifest_dir" = "${proto_dir}/lib/svc/manifest"
 "build_dir" = "${CARGO_MAKE_CRATE_TARGET_DIRECTORY}/${CARGO_BUILD_TYPE}"
 
-[tasks.package]
+[tasks.package_ips]
 workspace = false
-dependencies = ["build_all"]
+dependencies = ["install"]
 [tasks.package_sysconfig.env]
 "COMPONENT_NAME" = "sysconfig"
 "COMPONENT_FMRI" = "service/management/${COMPONENT_NAME}"
