--- a/sysconfig/Cargo.toml
+++ b/sysconfig/Cargo.toml
@@ -7,6 +7,7 @@ license = "MPL-2.0"
 homepage = "https://github.com/Toasterson/illumos-installer"
 repository = "https://github.com/Toasterson/illumos-installer"
 documentation = "https://github.com/Toasterson/illumos-installer"
+include = ["src/main.rs", "sysconfig.xml"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
