--- a/Makefile.toml
+++ b/Makefile.toml
@@ -83,9 +83,10 @@ dependencies = ["install"]
 "COMPONENT_LICENSE" = "MPL v2.0"
 "REPO_NAME" = "repository"
 
-command = "bash"
+script_runner = "bash"
+script_extension = "bash"
+script_runner_args = ["-ev"]
 script = '''
-set -ev
 cd ${CARGO_MAKE_CRATE_TARGET_DIRECTORY}
 mkdir manifests
 pkgsend generate protype | pkgfmt > manifests/${COMPONENT_NAME}.p5m.1
