Fix shell escaping

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -79,16 +79,16 @@ rm -rf manifests ${REPO_NAME}
 mkdir manifests
 pkgsend generate protype | pkgfmt > manifests/${COMPONENT_NAME}.p5m.1
 pkgmogrify \
-    -DCOMPONENT_NAME=${COMPONENT_NAME} \
-    -DCOMPONENT_FMRI=${COMPONENT_FMRI} \
-    -DIPS_COMPONENT_VERSION=${IPS_COMPONENT_VERSION} \
-    -DBUILD_VERSION=${BUILD_VERSION} \
-    -DCOMPONENT_SUMMARY=${COMPONENT_SUMMARY} \
-    -DCOMPONENT_CLASSIFICATION=${COMPONENT_CLASSIFICATION} \
-    -DCOMPONENT_PROJECT_URL=${COMPONENT_PROJECT_URL} \
-    -DCONSOLIDATION=${CONSOLIDATION} \
-    -DCOMPONENT_LICENSE_FILE=${COMPONENT_LICENSE_FILE} \
-    -DCOMPONENT_LICENSE=${COMPONENT_LICENSE} \
+    -DCOMPONENT_NAME='${COMPONENT_NAME}' \
+    -DCOMPONENT_FMRI='${COMPONENT_FMRI}' \
+    -DIPS_COMPONENT_VERSION='${IPS_COMPONENT_VERSION}' \
+    -DBUILD_VERSION='${BUILD_VERSION}' \
+    -DCOMPONENT_SUMMARY='${COMPONENT_SUMMARY}' \
+    -DCOMPONENT_CLASSIFICATION='${COMPONENT_CLASSIFICATION}' \
+    -DCOMPONENT_PROJECT_URL='${COMPONENT_PROJECT_URL}' \
+    -DCONSOLIDATION='${CONSOLIDATION}' \
+    -DCOMPONENT_LICENSE_FILE='${COMPONENT_LICENSE_FILE}' \
+    -DCOMPONENT_LICENSE='${COMPONENT_LICENSE}' \
     manifests/${COMPONENT_NAME}.p5m.1 ${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/pkg/sysconfig.mog | pkgfmt > manifests/${COMPONENT_NAME}.p5m.2
 pkgdepend generate -md protype manifests/${COMPONENT_NAME}.p5m.2 | pkgfmt > manifests/${COMPONENT_NAME}.p5m.3
 pkgdepend resolve -m manifests/${COMPONENT_NAME}.p5m.3
