--- a/Makefile.toml
+++ b/Makefile.toml
@@ -92,10 +92,10 @@ pkgmogrify \
     manifests/${COMPONENT_NAME}.p5m.1 ${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/pkg/sysconfig.mog | pkgfmt > manifests/${COMPONENT_NAME}.p5m.2
 pkgdepend generate -md protype manifests/${COMPONENT_NAME}.p5m.2 | pkgfmt > manifests/${COMPONENT_NAME}.p5m.3
 pkgdepend resolve -m manifests/${COMPONENT_NAME}.p5m.3
-pkglint manifests/${COMPONENT_NAME}.p5m.3
+pkglint manifests/${COMPONENT_NAME}.p5m.3.res
 pkgrepo create ${REPO_NAME}
 pkgrepo -s ${REPO_NAME} set publisher/prefix=toasterson
-pkgsend -s ${REPO_NAME} publish -d protype manifests/${COMPONENT_NAME}.p5m.3
+pkgsend -s ${REPO_NAME} publish -d protype manifests/${COMPONENT_NAME}.p5m.3.res
 pkgrecv -s ${REPO_NAME} -a -d ${COMPONENT_NAME}.p5p ${COMPONENT_FMRI}
 '''
 [tasks.package_ips.env]
