--- a/Makefile.toml
+++ b/Makefile.toml
@@ -94,7 +94,7 @@ script = '''
 cd ${CARGO_MAKE_CRATE_TARGET_DIRECTORY}
 rm -rf manifests ${REPO_NAME}
 mkdir manifests
-pkgsend generate protype | pkgfmt > manifests/${COMPONENT_NAME}.p5m.1
+pkgsend generate prototype | pkgfmt > manifests/${COMPONENT_NAME}.p5m.1
 pkgmogrify \
     -DCOMPONENT_NAME="${COMPONENT_NAME}" \
     -DCOMPONENT_FMRI="${COMPONENT_FMRI}" \
@@ -107,12 +107,12 @@ pkgmogrify \
     -DCOMPONENT_LICENSE_FILE="${COMPONENT_LICENSE_FILE}" \
     -DCOMPONENT_LICENSE="${COMPONENT_LICENSE}" \
     manifests/${COMPONENT_NAME}.p5m.1 ${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/pkg/sysconfig.mog | pkgfmt > manifests/${COMPONENT_NAME}.p5m.2
-pkgdepend generate -md protype manifests/${COMPONENT_NAME}.p5m.2 | pkgfmt > manifests/${COMPONENT_NAME}.p5m.3
+pkgdepend generate -md prototype manifests/${COMPONENT_NAME}.p5m.2 | pkgfmt > manifests/${COMPONENT_NAME}.p5m.3
 pkgdepend resolve -m manifests/${COMPONENT_NAME}.p5m.3
 pkglint manifests/${COMPONENT_NAME}.p5m.3.res
 pkgrepo create ${REPO_NAME}
 pkgrepo -s ${REPO_NAME} set publisher/prefix=toasterson
-pkgsend -s ${REPO_NAME} publish -d protype -d ${CARGO_MAKE_WORKING_DIRECTORY} manifests/${COMPONENT_NAME}.p5m.3.res
+pkgsend -s ${REPO_NAME} publish -d prototype -d ${CARGO_MAKE_WORKING_DIRECTORY} manifests/${COMPONENT_NAME}.p5m.3.res
 pkgrecv -s ${REPO_NAME} -a -d ${COMPONENT_NAME}.p5p ${COMPONENT_FMRI}
 '''
 [tasks.package_ips.env]
