--- a/libsysconfig/Cargo.toml
+++ b/libsysconfig/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1"
 lazy_static = "1"
+log = "0.4"
 
 [dependencies.tera]
 version = "1"
