--- a/sysconfig/Cargo.toml
+++ b/sysconfig/Cargo.toml
@@ -19,6 +19,12 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
 ron = "0.7"
+log = "0.4"
+slog = "2.7"
+slog-stdlog = "4.1"
+slog-scope = "4.4"
+slog-async = "2.7"
+slog-term = "2.9"
 
 libsysconfig = {path = "../libsysconfig"}
 libcfgparser = {path = "../libcfgparser"}
