--- a/sysconfig/Cargo.toml
+++ b/sysconfig/Cargo.toml
@@ -25,6 +25,7 @@ slog-stdlog = "4.1"
 slog-scope = "4.4"
 slog-async = "2.7"
 slog-term = "2.9"
+slog-syslog = { version = "0.13"}
 
 libsysconfig = {path = "../libsysconfig"}
 libcfgparser = {path = "../libcfgparser"}
