--- a/libinstall/Cargo.toml
+++ b/libinstall/Cargo.toml
@@ -16,3 +16,14 @@ thiserror = "1.0.30"
 libcfgparser = {path= "../libcfgparser"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.8"
+ron = "0.7"
+uuid = { version = "0.8", features = [ "serde", "v4" ] }
+digest = "0.9"
+md-5 = "0.9"
+sha-1 = "0.9"
+log = "0.4"
+libc = "0.2"
+illumos = {path = "../illumos"}
+reqwest = { version = "0.11", features = ["stream"] }
+futures-util = "0.3.14"
